# deezer-tui

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  release.sh
.circleci/: config.yml
.claude/: settings.json
.githooks/: pre-commit
assets/: README.md  search.tape  themes.tape
crates/deezer-core/: Cargo.toml
crates/deezer-core/src/: config.rs  decrypt.rs  lib.rs  offline.rs
crates/deezer-core/src/api/: auth.rs  gateway.rs  media.rs  mod.rs  models.rs
crates/deezer-core/src/player/: engine.rs  mod.rs  state.rs  stream.rs
crates/deezer-tui/: Cargo.toml
crates/deezer-tui/src/: app.rs  client.rs  daemon.rs  event.rs  favorites_cache.rs  i18n.rs  main.rs  mpris.rs  protocol.rs  theme.rs  web_login.rs
crates/deezer-tui/src/ui/: album_detail.rs  artist_detail.rs  categories.rs  common.rs  downloads.rs  explore.rs  favorites.rs  genre_detail.rs  login.rs  mod.rs  moods.rs  player.rs  popup.rs  radio.rs  search.rs
