[package]
name = "deezer-tui"
description = "Terminal UI for Deezer music player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deezer-tui"
path = "src/main.rs"

[dependencies]
deezer-core = { path = "../deezer-core" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

arboard = "3"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
reqwest = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
